<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_fragment_top_margin">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:contentDescription="@string/football_league"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/match_day"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/share_container_top_margin">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/share"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:drawableStart="@android:drawable/ic_menu_share"
            android:gravity="center"
            android:paddingLeft="@dimen/share_button_padding"
            android:paddingStart="@dimen/share_button_padding"
            android:paddingRight="@dimen/share_button_padding"
            android:paddingEnd="@dimen/share_button_padding"
            android:text="@string/share_text" />
    </FrameLayout>

</LinearLayout>