<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#40923e"
    android:elevation="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/score_cell_padding">

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="@dimen/team_logo_size"
                android:layout_height="@dimen/team_logo_size"
                android:layout_gravity="center"
                android:contentDescription="@string/home_logo" />

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/score_team_name_padding"
                android:text="@string/test_text"
                android:contentDescription="@string/home"
                android:textSize="@dimen/TeamNames" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingTop="@dimen/score_cell_padding">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:contentDescription="@string/score"
                android:text="@string/test_text"
                android:textSize="@dimen/Score" />

            <TextView
                android:id="@+id/data_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/date"
                android:gravity="center"
                android:text="@string/test_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/score_cell_padding">

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="@dimen/team_logo_size"
                android:layout_height="@dimen/team_logo_size"
                android:layout_gravity="center"
                android:contentDescription="@string/away_logo" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/away"
                android:gravity="center"
                android:padding="@dimen/score_team_name_padding"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/details_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>
</LinearLayout>


